src/validation/tests/snapshots/rusty__validation__tests__naming_validation_test__UINT.snap
---
source: src/validation/tests/naming_validation_test.rs
expression: "& result"
---
error[E004]: UINT can not be used as a name because it is a built-in datatype
  ┌─ <internal>:1:6
  │
1 │ TYPE UINT : STRUCT x : DINT; END_STRUCT END_TYPE
  │      ^^^^ UINT can not be used as a name because it is a built-in datatype

error[E004]: UINT: Ambiguous datatype.
  ┌─ <internal>:1:6
  │
1 │ TYPE UINT : STRUCT x : DINT; END_STRUCT END_TYPE
  │      ^^^^ UINT: Ambiguous datatype.
